--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" type="image/png" href="./image/icon.png" />
   </head>
   <body>
+    <h1>Hello World</h1>
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
