--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>This is a template</p>
     <!-- Script -->
     <script src="./script.js"></script>
   </body>
